--- a/public/i18n/translations/ru.json
+++ b/public/i18n/translations/ru.json
@@ -7,6 +7,9 @@
         "passwordPlaceholder": "Пароль",
         "signInButton": "Войти",
         "forgotPassword": "Забыли пароль?",
+        "rememberMe": "Запомнить меня",
+        "showPassword": "Показать пароль",
+        "hidePassword": "Скрыть пароль",
         "errors": {
             "invalidCredentials": "Неверный адрес электронной почты или пароль.",
             "generic": "Не удалось выполнить вход. Попробуйте ещё раз.",
@@ -59,7 +62,19 @@
             "email": "Введите корректный адрес электронной почты.",
             "phone": "Введите корректный номер телефона.",
             "countryCode": "Выберите код страны.",
-            "position": "Выберите должность."
+            "position": "Выберите должность.",
+            "badRequest": "Не удалось обработать введённые данные. Проверьте форму и попробуйте снова.",
+            "unauthorized": "Необходимо войти в систему, прежде чем продолжить.",
+            "forbidden": "У вас нет прав для выполнения этого действия.",
+            "notFound": "Не удалось найти заявку на регистрацию с такими данными.",
+            "conflict": "Аккаунт с таким адресом электронной почты уже существует.",
+            "validation": "Некоторые данные выглядят некорректно. Проверьте форму и повторите попытку.",
+            "rateLimited": "Слишком много попыток. Подождите немного и попробуйте снова.",
+            "server": "На сервере возникла ошибка. Попробуйте позже.",
+            "generic": "Не удалось завершить регистрацию. Повторите попытку позже.",
+            "network": "Не удалось подключиться к серверу. Проверьте соединение и попробуйте снова.",
+            "sessionRequired": "Сессия администратора истекла. Пожалуйста, войдите снова.",
+            "unexpectedResponse": "Получен неожиданный ответ сервера."
         },
         "notification": {
             "codeSentTitle": "Код подтверждения отправлен",
@@ -252,7 +267,8 @@
         "delete": "Удалить",
         "save": "Сохранить",
         "cancel": "Отмена",
-        "close": "Закрыть"
+        "close": "Закрыть",
+        "retry": "Повторить"
     },
     "chatbot": {
         "toggle": "Переключить чат-бота",
@@ -282,6 +298,7 @@
             "profile": "Профиль",
             "settings": "Настройки",
             "privacy": "Конфиденциальность и безопасность",
+            "legalEditor": "Редактировать юридический текст",
             "logout": "Выйти"
         }
     },
@@ -349,5 +366,20 @@
         "lightMode": "Светлая тема",
         "darkMode": "Тёмная тема",
         "backToDashboard": "Вернуться к панели"
+    },
+    "legalEditor": {
+        "title": "Редактор юридического контента",
+        "subtitle": "Обновляйте все юридические страницы и футер в одном месте.",
+        "footerSection": "Содержимое футера",
+        "footerCompany": "Название компании",
+        "footerEmail": "Контактный e-mail",
+        "footerPhone": "Телефон",
+        "footerAddress": "Адрес (по строкам)",
+        "footerAddressPlaceholder": "Каждую строку адреса вводите отдельно.",
+        "legalSection": "Содержание юридических страниц",
+        "cancelButton": "Отмена",
+        "saveButton": "Сохранить изменения",
+        "saving": "Сохранение...",
+        "saveError": "Не удалось сохранить изменения. Попробуйте снова."
     }
 }
