--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -7,6 +7,9 @@
         "passwordPlaceholder": "Пароль",
         "signInButton": "Войти",
         "forgotPassword": "Забыли пароль?",
+        "rememberMe": "Запомнить меня",
+        "showPassword": "Показать пароль",
+        "hidePassword": "Скрыть пароль",
         "errors": {
             "invalidCredentials": "Неверный адрес электронной почты или пароль.",
             "generic": "Не удалось выполнить вход. Попробуйте ещё раз.",
@@ -295,6 +298,7 @@
             "profile": "Профиль",
             "settings": "Настройки",
             "privacy": "Конфиденциальность и безопасность",
+            "legalEditor": "Редактировать юридический текст",
             "logout": "Выйти"
         }
     },
@@ -362,5 +366,20 @@
         "lightMode": "Светлая тема",
         "darkMode": "Тёмная тема",
         "backToDashboard": "Вернуться к панели"
+    },
+    "legalEditor": {
+        "title": "Редактор юридического контента",
+        "subtitle": "Обновляйте все юридические страницы и футер в одном месте.",
+        "footerSection": "Содержимое футера",
+        "footerCompany": "Название компании",
+        "footerEmail": "Контактный e-mail",
+        "footerPhone": "Телефон",
+        "footerAddress": "Адрес (по строкам)",
+        "footerAddressPlaceholder": "Каждую строку адреса вводите отдельно.",
+        "legalSection": "Содержание юридических страниц",
+        "cancelButton": "Отмена",
+        "saveButton": "Сохранить изменения",
+        "saving": "Сохранение...",
+        "saveError": "Не удалось сохранить изменения. Попробуйте снова."
     }
 }
