--- a/public/i18n/translations/ar.json
+++ b/public/i18n/translations/ar.json
@@ -7,6 +7,9 @@
         "passwordPlaceholder": "كلمة المرور",
         "signInButton": "تسجيل الدخول",
         "forgotPassword": "هل نسيت كلمة المرور؟",
+        "rememberMe": "تذكرني",
+        "showPassword": "إظهار كلمة المرور",
+        "hidePassword": "إخفاء كلمة المرور",
         "errors": {
             "invalidCredentials": "البريد الإلكتروني أو كلمة المرور غير صحيحة.",
             "generic": "تعذّر إتمام تسجيل الدخول. يرجى المحاولة مرة أخرى.",
@@ -59,7 +62,19 @@
             "email": "يرجى إدخال بريد إلكتروني صالح.",
             "phone": "يرجى إدخال رقم هاتف صالح.",
             "countryCode": "يرجى اختيار رمز الدولة.",
-            "position": "يرجى اختيار المنصب."
+            "position": "يرجى اختيار المنصب.",
+            "badRequest": "تعذّر معالجة البيانات المدخلة. يرجى مراجعة النموذج والمحاولة مرة أخرى.",
+            "unauthorized": "يلزم تسجيل الدخول قبل المتابعة.",
+            "forbidden": "ليست لديك صلاحية لتنفيذ هذا الإجراء.",
+            "notFound": "تعذّر العثور على طلب تسجيل مطابق لبياناتك.",
+            "conflict": "يوجد حساب مسجل بهذا البريد الإلكتروني بالفعل.",
+            "validation": "تبدو بعض البيانات غير صحيحة. يرجى مراجعة النموذج والمحاولة مرة أخرى.",
+            "rateLimited": "تم إجراء محاولات كثيرة. يرجى الانتظار قليلاً ثم المحاولة مجددًا.",
+            "server": "هناك مشكلة في الخادم حالياً. يرجى المحاولة لاحقًا.",
+            "generic": "تعذّر إكمال التسجيل حالياً. يرجى المحاولة مرة أخرى.",
+            "network": "تعذّر الاتصال بالخادم. تحقق من الاتصال ثم أعد المحاولة.",
+            "sessionRequired": "انتهت صلاحية جلسة المسؤول. يرجى تسجيل الدخول مرة أخرى.",
+            "unexpectedResponse": "تلقينا استجابة غير متوقعة من الخادم."
         },
         "notification": {
             "codeSentTitle": "تم إرسال رمز التحقق",
@@ -252,7 +267,8 @@
         "delete": "حذف",
         "save": "حفظ",
         "cancel": "إلغاء",
-        "close": "إغلاق"
+        "close": "إغلاق",
+        "retry": "إعادة المحاولة"
     },
     "chatbot": {
         "toggle": "تبديل الشات بوت",
@@ -282,6 +298,7 @@
             "profile": "الملف الشخصي",
             "settings": "الإعدادات",
             "privacy": "الخصوصية والأمان",
+            "legalEditor": "تحرير المحتوى القانوني",
             "logout": "تسجيل الخروج"
         }
     },
@@ -349,5 +366,20 @@
         "lightMode": "وضع الإضاءة",
         "darkMode": "الوضع الداكن",
         "backToDashboard": "العودة إلى لوحة التحكم"
+    },
+    "legalEditor": {
+        "title": "محرر المحتوى القانوني",
+        "subtitle": "حدّث كل صفحات الشروط والخصوصية ومحتوى الفوتر من مكان واحد.",
+        "footerSection": "محتوى الفوتر",
+        "footerCompany": "اسم الشركة",
+        "footerEmail": "البريد الإلكتروني للتواصل",
+        "footerPhone": "رقم الهاتف",
+        "footerAddress": "العنوان (كل سطر على حدة)",
+        "footerAddressPlaceholder": "أضف كل سطر من العنوان في سطر منفصل.",
+        "legalSection": "محتوى الصفحات القانونية",
+        "cancelButton": "إلغاء",
+        "saveButton": "حفظ التغييرات",
+        "saving": "جاري الحفظ...",
+        "saveError": "تعذّر حفظ المحتوى، يرجى المحاولة مرة أخرى."
     }
 }
