feat(v0.3): iOS 28 redesign, Release Notes i18n, and Security Hardening
- Implemented iOS 28 inspired design with ultra-glassmorphism and fluid animations.
- Added comprehensive Release Notes feature with i18n support (TR, EN, DE, RU, AR).
- Fixed P0 Authentication Bypass in AuthContext.
- Fixed P1 Weak Security Configuration in PHP backend (enforced env secrets).
- Updated localization files and moved to public directory.
- Enhanced Date Picker and Calendar interactions.

--- a/hasiripi_backup/i18n/translations/ar.json
+++ b/hasiripi_backup/i18n/translations/ar.json
@@ -1,4 +1,3 @@
-
 {
     "login": {
         "welcome": "أهلاً بك في",
@@ -268,7 +267,8 @@
         "save": "حفظ",
         "cancel": "إلغاء",
         "close": "إغلاق",
-        "retry": "إعادة المحاولة"
+        "retry": "إعادة المحاولة",
+        "view": "عرض"
     },
     "chatbot": {
         "toggle": "تبديل الشات بوت",
@@ -325,7 +325,8 @@
             "language": "اللغة",
             "darkMode": "الوضع الداكن",
             "emailNotifications": "إشعارات البريد الإلكتروني",
-            "pushNotifications": "الإشعارات الفورية"
+            "pushNotifications": "الإشعارات الفورية",
+            "checkUpdates": "ملاحظات الإصدار"
         },
         "privacy": {
             "title": "الخصوصية والأمان",
@@ -352,7 +353,9 @@
     },
     "schedule": {
         "title": "العنوان",
+        "titlePlaceholder": "عنوان الاجتماع",
         "day": "اليوم",
+        "date": "التاريخ",
         "time": "الوقت",
         "participants": "المشاركون",
         "type": "النوع"
