--- a/hasiripi_backup/i18n/translations/tr.json
+++ b/hasiripi_backup/i18n/translations/tr.json
@@ -267,7 +267,8 @@
         "close": "Kapat",
         "save": "Kaydet",
         "cancel": "İptal",
-        "retry": "Tekrar dene"
+        "retry": "Tekrar dene",
+        "view": "Görüntüle"
     },
     "chatbot": {
         "toggle": "Chatbot'u Aç/Kapat",
@@ -295,6 +296,7 @@
     "profile": {
         "menu": {
             "profile": "Profil",
+            "releaseNotes": "Sürüm Notları v2.0",
             "settings": "Ayarlar",
             "privacy": "Gizlilik ve Güvenlik",
             "legalEditor": "Yasal içeriği düzenle",
@@ -324,7 +326,8 @@
             "language": "Dil",
             "darkMode": "Karanlık Mod",
             "emailNotifications": "E-posta Bildirimleri",
-            "pushNotifications": "Anlık Bildirimler"
+            "pushNotifications": "Anlık Bildirimler",
+            "checkUpdates": "Sürüm Notları"
         },
         "privacy": {
             "title": "Gizlilik ve Güvenlik",
