--- a/public/i18n/translations/ru.json
+++ b/public/i18n/translations/ru.json
@@ -1,4 +1,3 @@
-
 {
     "login": {
         "welcome": "Добро пожаловать в",
@@ -268,7 +267,8 @@
         "save": "Сохранить",
         "cancel": "Отмена",
         "close": "Закрыть",
-        "retry": "Повторить"
+        "retry": "Повторить",
+        "view": "Посмотреть"
     },
     "chatbot": {
         "toggle": "Переключить чат-бота",
@@ -325,7 +325,8 @@
             "language": "Язык",
             "darkMode": "Темный режим",
             "emailNotifications": "Уведомления по почте",
-            "pushNotifications": "Push-уведомления"
+            "pushNotifications": "Push-уведомления",
+            "checkUpdates": "Заметки о выпуске"
         },
         "privacy": {
             "title": "Конфиденциальность и безопасность",
@@ -350,9 +351,14 @@
             "match": "Пароли не совпадают."
         }
     },
+    "releaseNotes": {
+        "dontShowAgain": "Больше не показывать эту версию"
+    },
     "schedule": {
         "title": "Название",
+        "titlePlaceholder": "Название встречи",
         "day": "День",
+        "date": "Дата",
         "time": "Время",
         "participants": "Участники",
         "type": "Тип"
