Fix: Messaging system visual improvements, login endpoint fix, and dark mode optimizations

--- a/i18n/translations/ar.json
+++ b/i18n/translations/ar.json
@@ -362,7 +362,9 @@
     "date": "التاريخ",
     "time": "الوقت",
     "participants": "المشاركون",
-    "type": "النوع"
+    "type": "النوع",
+    "fixDateTitle": "تحديد التاريخ",
+    "fixDateDesc": "يبدو أن هذا الحدث متكرر. قم بتعيين تاريخ محدد لجعله حدثًا لمرة واحدة."
   },
   "legal": {
     "title": {
