--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -362,7 +362,9 @@
     "date": "Дата",
     "time": "Время",
     "participants": "Участники",
-    "type": "Тип"
+    "type": "Тип",
+    "fixDateTitle": "Установить дату",
+    "fixDateDesc": "Похоже, это повторяющееся событие. Назначьте конкретную дату, чтобы сделать его разовым."
   },
   "legal": {
     "title": {
