--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -390,5 +390,26 @@
     "saveButton": "Сохранить изменения",
     "saving": "Сохранение...",
     "saveError": "Не удалось сохранить изменения. Попробуйте снова."
+  },
+  "email": {
+    "inviteSubject": "Вас пригласили в Dripfy",
+    "inviteTitle": "Добро пожаловать в команду",
+    "inviteIntro": "Здравствуйте, {name},<br><br>Вас пригласили присоединиться к <strong>Dripfy</strong>. Вы можете принять приглашение ниже, чтобы получить доступ к панели управления как <strong>{role}</strong>.",
+    "inviteButton": "Принять приглашение",
+    "inviteFooter": "Если вы не ожидали этого приглашения, пожалуйста, проигнорируйте это письмо.",
+    "resetSubject": "Сброс пароля",
+    "resetTitle": "Сброс пароля",
+    "resetIntro": "Мы получили запрос на сброс пароля для вашего аккаунта Dripfy. Используйте код ниже:<br><br>{code}<br><br>Этот код действителен в течение {ttl} минут.",
+    "resetButton": "Сбросить пароль",
+    "resetFooter": "Если вы не запрашивали сброс пароля, просто проигнорируйте это письмо.",
+    "signupCodeSubject": "Ваш код подтверждения",
+    "signupCodeTitle": "Код подтверждения",
+    "signupCodeIntro": "Ваш код подтверждения для панели управления Dripfy готов. Используйте код ниже:<br><br>{code}<br><br>Этот код действителен в течение {ttl} минут.",
+    "signupCodeButton": "Открыть панель",
+    "signupCodeFooter": "Если вы не запрашивали этот код, пожалуйста, проигнорируйте это письмо.",
+    "signupReceivedSubject": "Мы получили ваш запрос",
+    "signupReceivedTitle": "Запрос получен",
+    "signupReceivedIntro": "Мы получили ваш запрос на регистрацию в панели управления Dripfy. Наша команда проверит ваши данные и свяжется с вами в ближайшее время.<br><br><strong>Ваши данные</strong><br>{details}",
+    "signupReceivedFooter": "Вы можете ответить на это письмо, если у вас есть вопросы."
   }
 }
